--- a/master/website/board/templates/board3/chart_if.html
+++ b/master/website/board/templates/board3/chart_if.html
@@ -134,8 +134,8 @@ ul.tabs li.current{
     var csrftoken = getCookie('csrftoken');
     var xhr;
 
-    var this_year = new Date().getFullYear();
-    var this_month = new Date().getMonth() + 1;
+    var this_year = 2021;
+    var this_month = 1;
     var cur_item_idx = 0;
 
     var costbill_data = [];
