--- a/master/website/board/templates/board3/chart1.html
+++ b/master/website/board/templates/board3/chart1.html
@@ -140,13 +140,13 @@ ul.tabs li.current{
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0"></script>
 <script>
     var csrftoken = getCookie('csrftoken');
     var xhr;
 
-    var this_year = new Date().getFullYear();
-    var this_month = new Date().getMonth() + 1;
+    var this_year = 2021;
+    var this_month = 1;
     var cur_item_idx = 0;
 
     var costbill_data = [];
@@ -160,12 +160,12 @@ ul.tabs li.current{
     var manu_cost = [];
     var sales_cost = [];
 
-    var sales_max = 0;
-    var sales_min = 0;
-    var variable_max = 0;
-    var variable_min = 0;
-    var mater_max = 0;
-    var mater_min = 0;
+    var sales_max, sales_min;
+    var variable_max, variable_min;
+    var fixed_max, fixed_min;
+    var mater_max, mater_min;
+    var labor_max, labor_min;
+    var manu_max, manu_min;
 
     var inj_data;
     var inj_opt;
@@ -215,6 +215,7 @@ ul.tabs li.current{
                     set_period();
                     set_item_selectbox();
                     set_whole_data(costbill_data);
+                    set_min_max();
                     set_chart_data();
                     draw_chart();
                     fill_table();
@@ -303,15 +304,6 @@ ul.tabs li.current{
             manu_cost[item_list.length - 1][period_idx] += manu_cost[item_idx][period_idx];
             sales_cost[item_list.length - 1][period_idx] += sales_cost[item_idx][period_idx];
         }
-
-        for (var i = 0; i < period_list.length; i++) {
-            if (mater_max < mater_cost[cur_item_idx][i])
-                mater_max = mater_cost[cur_item_idx][i];
-            if (sales_max < sales_cost[cur_item_idx][i])
-                sales_max = sales_cost[cur_item_idx][i];
-            if (variable_max < variable_cost[cur_item_idx][i])
-                variable_max = variable_cost[cur_item_idx][i];
-        }
     }
 
     // 차트 데이터, 옵션 설정
@@ -325,29 +317,71 @@ ul.tabs li.current{
                 yAxisID: 'sales_line',
                 fill: false,
                 lineTension: 0,
-                pointRadius: 0,
-                borderColor: '#808080',
+                borderWidth: 2,
+                pointRadius: 2,
+                borderColor: '#F76F69',
                 hoverPointRadius: 5,
                 data: sales_cost[cur_item_idx]
             }, {
+                id: 'v_cost',
                 label: '변동비',
                 type: 'bar',
                 xAxisID: 'x_bottom',
                 yAxisID: 'cost_bar',
-                backgroundColor: '#F49FEA',
+                backgroundColor: '#E0772F',
+                borderWidth: 3,
+                borderColor: 'white',
                 data: variable_cost[cur_item_idx]
             }, {
+                id: 'f_cost',
                 label: '고정비',
                 type: 'bar',
                 xAxisID: 'x_bottom',
                 yAxisID: 'cost_bar',
-                backgroundColor: '#E38785',
+                backgroundColor: '#396C70',
+                borderWidth: 3,
+                borderColor: 'white',
                 data: fixed_cost[cur_item_idx]
             }]
         };
         inj_opt = {
-            responsive: false,
+            responsive: true,
+            plugins: {
+                datalabels: {
+                    anchor: 'end',
+                    align: 'end',
+                    borderRadius: 10,
+                    color: function (context) {
+                        if (context.dataset.type == 'line')
+                            return 'white';
+                        else if (context.dataset.type == 'bar')
+                            return context.dataset.backgroundColor;
+                    },
+                    display: function (context) {
+                        return context.dataset.type == 'line' || context.dataset.id == 'f_cost';
+                    },
+                    backgroundColor: function (context) {
+                        if (context.dataset.type == 'line')
+                            return context.dataset.borderColor;
+                        else if (context.dataset.type == 'bar')
+                            return 'transparent';
+                    },
+                    formatter: function (value) {
+                        return value;
+                        // 데리터 더한겂 출력
+                        // 당기 사용 틱 늘리기
+                        // 숫자 안잘리게 높이 늘리기
+                        // 막대 끝 둥글게
+                        // 색상 변경
+                    },
+                    font: {
+                        weight: 'bold',
+                        size: 12
+                    }
+                }
+            },
             legend: {
+                position: 'bottom',
                 labels: {
                     fontColor: '#000000'
                 }
@@ -361,10 +395,11 @@ ul.tabs li.current{
                     position: 'left',
                     stacked: true,
                     ticks: {
-                        fontColor: '#808080',
-                        min: 270,
-                        max: sales_max+20,
+                        fontColor: '#F76F69',
                         startAtZero: false
+                    },
+                    gridLines: {
+                        color: 'transparent'
                     },
                     scaleLabel: {
                         display: true,
@@ -376,9 +411,10 @@ ul.tabs li.current{
                     position: 'right',
                     stacked: true,
                     ticks: {
-                        min: 320,
-                        max: 380,
-                        fontColor: '#FF0000'
+                        fontColor: '#396C70'
+                    },
+                    gridLines: {
+                        color: 'transparent'
                     },
                     scaleLabel: {
                         display: true,
@@ -400,8 +436,8 @@ ul.tabs li.current{
                     gridLines: {
                         color: 'transparent',
                         drawTicks: false,
-                        zeroLineColor: '#808080',
-                        zeroLineWidth: 3
+                        zeroLineColor: '#F76F69',
+                        zeroLineWidth: 5
                     }
                 }, {
                     // 이 x축은 우측 y축의 색상을 변경하기 위해 넣은 축 (기능 X)
@@ -417,8 +453,8 @@ ul.tabs li.current{
                     gridLines: {
                         drawTicks: false,
                         color: 'transparent',
-                        zeroLineColor: 'rgba(255, 0, 0, 0.6)',
-                        zeroLineWidth: 3
+                        zeroLineColor: '#396C70',
+                        zeroLineWidth: 5
                     }
                 }]
             }
@@ -434,32 +470,72 @@ ul.tabs li.current{
                 fill: false,
                 lineTension: 0,
                 pointRadius: 0,
-                borderColor: '#808080',
+                borderColor: '#F76F69',
                 hoverPointRadius: 5,
                 data: sales_cost[cur_item_idx]
             }, {
+                id: 'mt_cost',
                 label: '재료비',
                 type: 'bar',
                 yAxisID: 'cost_bar',
-                backgroundColor: 'rgba(0, 0, 255, 0.6)',
+                backgroundColor: '#E0772F',
+                borderWidth: 2,
+                borderColor: 'white',
                 data: mater_cost[cur_item_idx]
             }, {
+                id: 'lb_cost',
                 label: '노무비',
                 type: 'bar',
                 yAxisID: 'cost_bar',
-                backgroundColor: 'rgba(93, 119, 255, 0.4)',
+                backgroundColor: '#396C70',
+                borderWidth: 2,
+                borderColor: 'white',
                 data: labor_cost[cur_item_idx]
             }, {
+                id: 'mn_cost',
                 label: '경비',
                 type: 'bar',
                 yAxisID: 'cost_bar',
-                backgroundColor: 'rgba(135, 175, 255, 0.4)',
+                backgroundColor: '#909090',
+                borderWidth: 2,
+                borderColor: 'white',
                 data: manu_cost[cur_item_idx]
             }]
         };
         usa_opt = {
             responsive: false,
+            plugins: {
+                datalabels: {
+                    anchor: 'end',
+                    align: 'end',
+                    borderRadius: 10,
+                    color: function (context) {
+                        if (context.dataset.type == 'line')
+                            return 'white';
+                        else if (context.dataset.type == 'bar')
+                            return context.dataset.backgroundColor;
+                    },
+                    display: function (context) {
+                        return context.dataset.type == 'line' || context.dataset.id == 'mn_cost';
+                    },
+                    backgroundColor: function (context) {
+                        if (context.dataset.type == 'line')
+                            return context.dataset.borderColor;
+                        else if (context.dataset.type == 'bar')
+                            return 'transparent';
+                    },
+                    formatter: function (value) {
+                        return value;
+                    },
+                    font: {
+                        weight: 'bold',
+                        size: 11
+                    },
+                    padding: 6
+                }
+            },
             legend: {
+                position: 'bottom',
                 labels: {
                     fontColor: '#000000'
                 }
@@ -467,30 +543,36 @@ ul.tabs li.current{
             scales: {
                 // y축
                 yAxes: [{
-                        id: 'sales_line',
-                        name: 'A',
-                        position: 'left',
-                        stacked: true,
-                        ticks: {
-                            fontColor: '#000000'
-                        },
-                        scaleLabel: {
-                            display: true,
-                            labelString: '매출액(원)'
-                        }
-                    }, {
-                        id: 'cost_bar',
-                        name: 'B',
-                        position: 'right',
-                        stacked: true,
-                        ticks: {
-                            fontColor: '#000000'
-                        },
-                        scaleLabel: {
-                            display: true,
-                            labelString: '매출액(원)'
-                        }
-                    }],
+                    id: 'sales_line',
+                    name: 'A',
+                    position: 'left',
+                    stacked: true,
+                    ticks: {
+                        fontColor: '#000000'
+                    },
+                    gridLines: {
+                        color: 'transparent'
+                    },
+                    scaleLabel: {
+                        display: true,
+                        labelString: '매출액(원)'
+                    }
+                }, {
+                    id: 'cost_bar',
+                    name: 'B',
+                    position: 'right',
+                    stacked: true,
+                    ticks: {
+                        fontColor: '#000000'
+                    },
+                    gridLines: {
+                        color: 'transparent'
+                    },
+                    scaleLabel: {
+                        display: true,
+                        labelString: '매출액(원)'
+                    }
+                }],
                 xAxes: [{
                     id: 'x_bottom',
                     stacked: true,
@@ -529,6 +611,20 @@ ul.tabs li.current{
                 }]
             }
         };
+
+        set_min_max();
+
+        // 각 y축 tick 최대 최소 설정
+        inj_opt.scales.yAxes[0].ticks.max = Math.floor((sales_max + (sales_max - sales_min)) / 10) * 10;
+        inj_opt.scales.yAxes[0].ticks.min = Math.floor((sales_min - (sales_max - sales_min)) / 10) * 10;
+        inj_opt.scales.yAxes[1].ticks.max =
+            Math.ceil((variable_max + fixed_max) / 10 + (fixed_min + fixed_max) / 100) * 10;
+        inj_opt.scales.yAxes[1].ticks.min = Math.ceil((variable_max - fixed_min) / 10) * 10;
+        usa_opt.scales.yAxes[0].ticks.max = Math.floor((sales_max + (sales_max - sales_min)) / 10) * 10;
+        usa_opt.scales.yAxes[0].ticks.min = Math.floor((sales_min - (sales_max - sales_min)) / 10) * 10;
+        usa_opt.scales.yAxes[1].ticks.max =
+            Math.ceil((mater_max + labor_max + manu_max) / 10 + (labor_max + labor_min + manu_max) / 100) * 10;
+        usa_opt.scales.yAxes[1].ticks.min = Math.ceil((mater_min - labor_min) / 10) * 10;
     }
 
     // 차트 그리기
@@ -683,10 +779,69 @@ ul.tabs li.current{
                 variable_max = variable_cost[cur_item_idx][i];
         }
 
+        inj_data.datasets[0].data = sales_cost[cur_item_idx];
+        inj_data.datasets[1].data = variable_cost[cur_item_idx];
+        inj_data.datasets[2].data = fixed_cost[cur_item_idx];
+
+        usa_data.datasets[0].data = sales_cost[cur_item_idx];
+        usa_data.datasets[1].data = mater_cost[cur_item_idx];
+        usa_data.datasets[2].data = labor_cost[cur_item_idx];
+        usa_data.datasets[3].data = manu_cost[cur_item_idx];
+
         inj_chart.destroy();
+        usa_chart.destroy();
         set_chart_data();
         draw_chart();
         fill_table();
+    }
+
+    function set_min_max() {
+        sales_max = 0;
+        variable_max = 0;
+        fixed_max = 0;
+        mater_max = 0;
+        labor_max = 0;
+        manu_max = 0;
+        sales_min = sales_cost[cur_item_idx][0];
+        variable_min = variable_cost[cur_item_idx][0];
+        fixed_min = fixed_cost[cur_item_idx][0];
+        mater_min = mater_cost[cur_item_idx][0];
+        labor_min = labor_cost[cur_item_idx][0];
+        manu_min = manu_cost[cur_item_idx][0];
+
+        for (var i = 1; i < period_list.length; i++) {
+            if (sales_min > sales_cost[cur_item_idx][i] && sales_cost[cur_item_idx][i] != 0)
+                sales_min = sales_cost[cur_item_idx][i];
+
+            if (variable_min > variable_cost[cur_item_idx][i] && variable_cost[cur_item_idx][i] != 0)
+                variable_min = variable_cost[cur_item_idx][i];
+            if (fixed_min > fixed_cost[cur_item_idx][i] && fixed_cost[cur_item_idx][i] != 0)
+                fixed_min = fixed_cost[cur_item_idx][i];
+
+            if (mater_min > mater_cost[cur_item_idx][i] && mater_cost[cur_item_idx][i] != 0)
+                mater_min = mater_cost[cur_item_idx][i];
+            if (labor_min > labor_cost[cur_item_idx][i] && labor_cost[cur_item_idx][i] != 0)
+                labor_min = labor_cost[cur_item_idx][i];
+            if (manu_min > manu_cost[cur_item_idx][i] && manu_cost[cur_item_idx][i] != 0)
+                manu_min = manu_cost[cur_item_idx][i];
+        }
+
+        for (var i = 0; i < period_list.length; i++) {
+            if (sales_max < sales_cost[cur_item_idx][i])
+                sales_max = sales_cost[cur_item_idx][i];
+
+            if (variable_max < variable_cost[cur_item_idx][i])
+                variable_max = variable_cost[cur_item_idx][i];
+            if (fixed_max < fixed_cost[cur_item_idx][i])
+                fixed_max = fixed_cost[cur_item_idx][i];
+
+            if (mater_max < mater_cost[cur_item_idx][i])
+                mater_max = mater_cost[cur_item_idx][i];
+            if (labor_max < labor_cost[cur_item_idx][i])
+                labor_max = labor_cost[cur_item_idx][i];
+            if (manu_max < manu_cost[cur_item_idx][i])
+                manu_max = manu_cost[cur_item_idx][i];
+        }
     }
 </script>
 
