--- a/master/website/templates/home.html
+++ b/master/website/templates/home.html
@@ -10,6 +10,42 @@ home
 {% include "navbar.html" %}
 {% include "sidebar.html" %}
 
+<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
+    <div class="modal-dialog" style="width:70%;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                <h4 class="modal-title">의사결정</h4>
+            </div>
+            <div class="modal-body" align="center">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="col-lg-6">
+                            <img src="" id="img1" width="100%">
+                        </div>
+                        <div class="col-lg-6">
+                            <img src=""id="img2" width="100%">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="col-lg-6">
+                            <img src="" id="img3" width="100%">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="" id="img4" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+</div>
+</div>
+
 <!--main content start-->
 <section id="main-content">
     <section class="wrapper">
@@ -59,7 +95,7 @@ home
                     <div class="panel-heading">
                         <h2><strong>Explanation</strong></h2>
                     </div>
-                    <div class="info-box dark-bg">
+                    <div class="info-box dark-bg" onclick="explanation();">
                         <i class="fa fa-money"></i>
                         <div class="count">Explanation</div>
                         <div class="title">의사결정지원</div>
@@ -112,9 +148,9 @@ home
                 <button class="btn btn-primary btn-lg" onclick="train()">학습</button>
                 <br>
                 {% if model %}
-                    <button class="btn btn-default btn-lg" id="btn_get_predict" onclick="predict()">예측</button>
+                <button class="btn btn-default btn-lg" id="btn_get_predict" onclick="predict()">예측</button>
                 {% else %}
-                    <button class="btn btn-default btn-lg" disabled>...</button>
+                <button class="btn btn-default btn-lg" disabled>...</button>
                 {% endif %}
             </div>
         </div>
@@ -232,6 +268,41 @@ home
         </div>
     </section>
 </section>
+
+<script>
+
+    function explanation(){
+
+
+        var strurl = 'explainer';
+
+        xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function() {
+        if (xhr.readyState == 4) {
+
+            var data = xhr.responseText;
+            var obj = JSON.parse(data);
+            if (obj.success == false) {
+              alert(obj.message);
+            }
+            else {
+
+                alert('성공');
+                document.getElementById("img1").src ='/' + obj.img1;
+                document.getElementById("img2").src ='/' + obj.img2;
+                document.getElementById("img3").src ='/' + obj.img3;
+                document.getElementById("img4").src ='/' + obj.img4;
+                $("#myModal").modal("show");
+            }
+
+        }
+    };
+    xhr.open('GET', strurl);
+    xhr.setRequestHeader('X-CSRFToken', csrftoken);
+    xhr.send(null);
+    }
+
+</script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
 <script>
